through the misty mountains of fargate
